# monocorpus-models

./: .gitignore  README.md  credentials.py  models.py  pyproject.toml  requirements.txt  wrapper.py
src/monocorpus_models/: __init__.py
